# odata-simple-client

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: filter.rs  lib.rs  path.rs  ratelimiting.rs  uri.rs
