[package]
name = "odata-simple-client"
version = "0.2.0"
authors = ["Mathias Pius <contact@pius.io>"]
description = "Simplified OpenData API Client"
keywords = ["odata", "client", "opendata"]
repository = "https://github.com/Datavirke/odata-simple-client"
license = "MIT"

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
governor = "0.3.2"
hyper = { version = "0.14.7", features = ["client", "http1"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
urlencoding = "2.1.0"
thiserror = "1.0.24"
itertools = "0.10.0"
log = "0.4.14"

[dev-dependencies]
hyper-openssl = "0.9.1"
tokio = { version = "1.13.0", features = ["rt", "macros"]}