[package]
name = "odata-simple-client"
version = "0.2.3"
authors = ["Mathias Pius <contact@pius.io>"]
description = "Simplified OpenData API Client"
keywords = ["odata", "client", "opendata"]
repository = "https://github.com/Datavirke/odata-simple-client"
license = "MIT"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
itertools = "0.10.3"

hyper = { version = "0.14.19", features = ["client", "http1"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
urlencoding = "2.1.0"
thiserror = "1.0.31"

[dev-dependencies]
hyper-openssl = "0.9.2"
tokio = { version = "1.19.2", features = ["rt", "macros"]}
tokio-test = { version = "0.4.2" }