[package]
name = "odata-simple-client"
version = "0.2.6"
authors = ["Mathias Pius <contact@pius.io>"]
description = "Simplified OpenData API Client"
keywords = ["odata", "client", "opendata"]
repository = "https://github.com/Datavirke/odata-simple-client"
license = "MIT"

edition = "2021"

[dependencies]
log = "0.4"
itertools = "0.10"

hyper = { version = "0.14", features = ["client", "http1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
thiserror = "1"

governor = { version = "0.4", optional = true }

[features]
rate-limiting = ["governor"]

[dev-dependencies]
hyper-openssl = "0.9"
tokio = { version = "1.19", features = ["rt", "macros"]}
tokio-test = { version = "0.4" }
